force-app/main/default/objects/Ride__c/fields/Departure_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Departure_DateTime__c</fullName>
    <label>Departure DateTime</label>
    <type>DateTime</type>
</CustomField>