force-app/main/default/objects/Ride__c/fields/Distance_KM__c.field-meta.xml
<CustomField>
    <fullName>Distance_KM__c</fullName>
    <label>Distance KM</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>