force-app/main/default/objects/Ride__c/fields/Estimated_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Duration_Minutes__c</fullName>
    <label>Estimated Duration Minutes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>