force-app/main/default/objects/Ride__c/fields/From_eLoc__c.field-meta.xml
<CustomField>
    <fullName>From_eLoc__c</fullName>
    <label>From eLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>