force-app/main/default/objects/Ride__c/fields/From_State__c.field-meta.xml
<CustomField>
    <fullName>From_State__c</fullName>
    <label>From State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>