force-app/main/default/objects/Ride__c/fields/Price_Per_Seat__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Seat__c</fullName>
    <label>Price Per Seat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>