force-app/main/default/objects/Ride__c/fields/Publisher__c.field-meta.xml
<CustomField>
    <fullName>Publisher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Publisher</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rides</relationshipLabel>
    <relationshipName>Rides</relationshipName>
    <type>Lookup</type>
</CustomField>