force-app/main/default/objects/Ride__c/fields/To_eLoc__c.field-meta.xml
<CustomField>
    <fullName>To_eLoc__c</fullName>
    <label>To eLoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>