force-app/main/default/objects/Ride__c/fields/To_Latitude__c.field-meta.xml
<CustomField>
    <fullName>To_Latitude__c</fullName>
    <label>To Latitude</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>