force-app/main/default/objects/Ride__c/fields/To_Longitude__c.field-meta.xml
<CustomField>
    <fullName>To_Longitude__c</fullName>
    <label>To Longitude</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>