force-app/main/default/objects/Ride__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Car - Sedan</fullName>
            </value>
            <value>
                <fullName>Car - SUV</fullName>
            </value>
            <value>
                <fullName>Car - Hatchback</fullName>
            </value>
            <value>
                <fullName>Motorcycle</fullName>
            </value>
            <value>
                <fullName>Bus/Van</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>