force-app/main/default/objects/Ride__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>From_Location__c</columns>
    <columns>To_Location__c</columns>
    <columns>Departure_DateTime__c</columns>
    <columns>Available_Seats__c</columns>
    <columns>Status__c</columns>
    <columns>Publisher__c</columns>
    <columns>Price_Per_Seat__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>